--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-regular-svg-icons": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.4",
     "joi": "^17.9.0",
     "react": "^18.2.0",
