--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "preview": "npx vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.11.16",
     "axios": "^1.3.4",
     "joi": "^17.9.0",
     "react": "^18.2.0",
