--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
     "axios": "^1.3.4",
+    "dayjs": "^1.11.8",
     "joi": "^17.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
