--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.11.16",
+    "@tanstack/react-query": "^4.10.1",
     "axios": "^1.3.4",
     "joi": "^17.9.0",
     "react": "^18.2.0",
