--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.9.0",
+    "@tanstack/react-query": "^4.10.1",
     "axios": "^1.3.4",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.8",
     "joi": "^17.9.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.14.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
   },
